Fix alignment when youtube is embedded (iframe)

--- a/jade/assets/stylesheets/style.css
+++ b/jade/assets/stylesheets/style.css
@@ -214,8 +214,14 @@ article {
                   /* margins of text */
                   .row {
                      margin-top: 70px;
-                    margin-left: 0px;
-                    margin-right:0px;
+                     margin-left: 10px;
+                     margin-right:10px;
+                  }
+
+                  iframe {
+                      width: 500px;
+                      max-width: 100%;
+                      height: auto;
                   }
 }
 
